Fixed page alignment, spacing, and polished color scheme

--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -17,9 +17,10 @@
 p {
   font-size: 25px;
 }
+
 h1 {
-  margin-top: 1.8rem;
-  margin-bottom: 1.8rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
   font-size: 2.5em;
   vertical-align: middle; 
   text-align: center;
@@ -27,12 +28,12 @@ h1 {
 }
 
 h2 {
-  margin-top: -1rem;
+  margin-top: -1.1rem;
   margin-bottom: 1.8rem;
   font-size: 2.5em;
   vertical-align: middle;
   position: relative;
-  left: 118px;
+  left: 108px;
   padding: 10;
 }
 
