--- a/src/client/src/register.css
+++ b/src/client/src/register.css
@@ -7,13 +7,14 @@
   
   form {
       background-color: white;
-      margin-top: 30px;
-      padding: 5px 70px 0px 40px;
+      margin-top: 10px;
+      padding: 23px 70px 0px 40px;
       border-radius: 10px;
+      width: 500px;
   }
   
   h1 {
-      color: #2774AE;
+      color: black;
       text-align: center;
   }
   
@@ -30,4 +31,5 @@
       cursor: pointer;
       margin-top: 15px;
       margin-bottom: 30px;
+      font-family: "Raleway";
   }
