--- a/src/client/src/select.css
+++ b/src/client/src/select.css
@@ -29,7 +29,7 @@ background-color: white;
 }
 
 .option:hover {
-background-color: royalblue;
+background-color: #2774AE;
 }
 
 .input-container {
